[package]
name = "cmake-jobserver-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# cc is a dependency of cxx-build. The "parallel" feature is not turned on by default, but it
# decreases the compile time, so we want to enable it.
# cxx-build pins the cc version, so to enable the "parallel"
# feature, we do NOT pin the version, so that we get whatever version cxx-build pinned.
cc = { version = "*", features = ["parallel"] }

cmake = { path = "cmake-rs" }
